@@ -15,6 +15,7 @@
 #include "gridswap.h"
 
 #define COSTLIMIT (-0.5)
+#define REQUIRED_IMPROVEMENT (0.00001)
 
 Grid *gridRemoveTwoFaceCell(Grid *grid, Queue *queue, int cell )
 {
@@ -209,7 +210,8 @@ Grid *gridSwapFace(Grid *grid, Queue *queue, int n0, int n1, int n2 )
   bestcost = MIN( gridAR( grid, nodes[0] ), gridAR( grid, nodes[1] ) ); 
   bestcost = MIN( gridAR( grid, nodes[2] ), bestcost ); 
 
-  if ( bestcost > origcost && bestcost > COSTLIMIT ) {
+  if ( ( (bestcost-origcost) > REQUIRED_IMPROVEMENT) && 
+       ( bestcost > COSTLIMIT )  ) {
     gridRemoveCellAndQueue(grid, queue, cell0);
     gridRemoveCellAndQueue(grid, queue, cell1);
     for ( i = 0 ; i < 3 ; i++ )
@@ -532,7 +534,8 @@ Grid *gridSwapEdge4(Grid *grid, Queue *queue, int n0, int n1 )
     bestindex = 1;
   }
 
-  if ( bestcost > origcost && bestcost > COSTLIMIT ) {
+  if ( ( (bestcost-origcost) > REQUIRED_IMPROVEMENT) && 
+       ( bestcost > COSTLIMIT )  ) {
 
     if (bestindex == 0){
       nodes[0][0]=n0;
@@ -634,7 +637,8 @@ Grid *gridSwapEdge5(Grid *grid, Queue *queue, int n0, int n1 )
     gridCycleEquator( grid );
   }
 
-  if ( bestcost > origcost && bestcost > COSTLIMIT ) {
+  if ( ( (bestcost-origcost) > REQUIRED_IMPROVEMENT) && 
+       ( bestcost > COSTLIMIT )  ) {
 
     for ( i = 0 ; i < bestindex ; i++ ) 
       gridCycleEquator( grid );
@@ -692,7 +696,8 @@ Grid *gridSwapEdge6( Grid *grid, Queue *queue, int n0, int n1 )
   
   gridGetCombo6( grid, nodes, costs, &bestcost, bestcombo );
   
-  if ( bestcost > origcost && bestcost > COSTLIMIT ) {
+  if ( ( (bestcost-origcost) > REQUIRED_IMPROVEMENT) && 
+       ( bestcost > COSTLIMIT )  ) {
       
     gridRemoveGemAndQueue(grid,queue);
     
@@ -867,7 +872,8 @@ Grid *gridSwapEdge7( Grid *grid, Queue *queue, int n0, int n1 )
 
   gridGetCombo7( grid, nodes, costs, &bestcost, bestcombo );
   
-  if ( bestcost > origcost && bestcost > COSTLIMIT ) {
+  if ( ( (bestcost-origcost) > REQUIRED_IMPROVEMENT) && 
+       ( bestcost > COSTLIMIT )  ) {
 
     gridRemoveGemAndQueue(grid,queue);
     
