@@ -1,3 +1,8 @@
+2005-02-01 22:35 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridswap.c (REQUIRED_IMPROVEMENT) added a #define to require
+	this minimum improvement to accept swap.
+
 2005-02-01 22:20 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridinsert.c (gridAdaptBasedOnConnRankings) When a new node
